Update requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2024.7.4
 charset-normalizer==3.3.2
+execnet==2.1.1
 idna==3.7
 iniconfig==2.0.0
 logging==0.4.9.6
@@ -9,6 +10,7 @@ packaging==24.1
 pandas==2.2.2
 pluggy==1.5.0
 pytest==8.3.2
+pytest-xdist==3.6.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
